--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -7,15 +7,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.0
+  cupertino_icons: ^1.0.3
 
+environment:
+  sdk: '>=2.12.0 <3.0.0'
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   barcode_scan:
     path: ../
-  effective_dart: ^1.2.0
+  effective_dart: ^1.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
