--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,11 +2,12 @@ group 'de.mintware.barcode_scan'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.5.10'
     ext.protobuf_version = '0.9.3'
     repositories {
+        mavenCentral()
         google()
-        jcenter()
+        // jcenter()
     }
 
     dependencies {
@@ -18,8 +19,8 @@ buildscript {
 
 rootProject.allprojects {
     repositories {
+        mavenCentral()
         google()
-        jcenter()
     }
 }
 
@@ -28,7 +29,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.google.protobuf'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 33
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -49,12 +50,22 @@ protobuf {
     // Configure the protoc executable
     protoc {
         // Download from repositories
-        artifact = 'com.google.protobuf:protoc:3.11.4'
+        if (project.hasProperty('protoc_platform')) {
+            artifact = "com.google.protobuf:protoc:3.11.4:${protoc_platform}"
+        } else {
+            artifact = "com.google.protobuf:protoc:3.11.4"
+        }
+        // artifact = 'com.google.protobuf:protoc:3.11.4'
     }
     plugins {
         javalite {
             // The codegen for lite comes as a separate artifact
-            artifact = 'com.google.protobuf:protoc-gen-javalite:3.0.0'
+            // artifact = 'com.google.protobuf:protoc-gen-javalite:3.0.0'
+            if (project.hasProperty('protoc_platform')) {
+                artifact = "com.google.protobuf:protoc-gen-javalite:3.0.0:${protoc_platform}"
+            } else {
+                artifact = "com.google.protobuf:protoc-gen-javalite:3.0.0"
+            }
         }
     }
     generateProtoTasks {
@@ -69,7 +80,7 @@ protobuf {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'me.dm7.barcodescanner:zxing:1.9.13'
+    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
     implementation 'com.google.protobuf:protobuf-lite:3.0.1'
     api 'com.google.android.material:material:1.1.0'
 }
