--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,7 +51,7 @@ protobuf {
     protoc {
         // Download from repositories
         if (project.hasProperty('protoc_platform')) {
-            artifact = "com.google.protobuf:protoc:3.11.4:${protoc_platform}"
+            artifact = "com.google.protobuf:protoc:3.11.4:osx-x86_64"
         } else {
             artifact = "com.google.protobuf:protoc:3.11.4"
         }
@@ -62,7 +62,7 @@ protobuf {
             // The codegen for lite comes as a separate artifact
             // artifact = 'com.google.protobuf:protoc-gen-javalite:3.0.0'
             if (project.hasProperty('protoc_platform')) {
-                artifact = "com.google.protobuf:protoc-gen-javalite:3.0.0:${protoc_platform}"
+                artifact = "com.google.protobuf:protoc-gen-javalite:3.0.0:osx-x86_64"
             } else {
                 artifact = "com.google.protobuf:protoc-gen-javalite:3.0.0"
             }
