--- a/android/build.gradle
+++ b/android/build.gradle
@@ -53,7 +53,7 @@ protobuf {
         if (project.hasProperty('protoc_platform')) {
             artifact = "com.google.protobuf:protoc:3.11.4:osx-x86_64"
         } else {
-            artifact = "com.google.protobuf:protoc:3.11.4"
+            artifact = "com.google.protobuf:protoc:3.11.4:osx-x86_64"
         }
         // artifact = 'com.google.protobuf:protoc:3.11.4'
     }
